--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,10 @@
 {
   "version": "0.2.0",
   "configurations": [
+    {
+      "name": ".NET Attach",
+      "type": "coreclr",
+      "request": "attach",
+    },
   ],
 }
