--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,7 +46,29 @@
         "cwd": "${workspaceFolder}",
       },
     },
+    {
+      "label": "run:benchmarks",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "run",
+        "--project",
+        "${workspaceFolder}/tests/Spanned.Benchmarks/Spanned.Benchmarks.csproj",
+        "-tl",
+        "-c",
+        "Release",
+        "--filter",
+        "${input:benchmarkFilter}",
+      ],
+      "problemMatcher": "$msCompile",
+    },
   ],
   "inputs": [
+    {
+      "id": "benchmarkFilter",
+      "description": "BenchmarkDotNet Filter",
+      "default": "*",
+      "type": "promptString",
+    },
   ],
 }
